[dev1.0] - Enhance Query APIs, Simplify Service Integration, and Expand Library Test Coverage
** Key Changes Includes **
- Enable paginated data retrieval through QueryProcessor.fetchPage(...) and DefaultQueryProcessor, supporting Pageable, Page, total counts, and unpaged requests.
- Improve QueryBuilder pagination with count-query generation, validated sorting, pagination boundaries, and immutable parameter snapshots.
- Introduce QueryOperator in the enumeration package to provide typed WHERE and JOIN/ON predicates, validate operand counts, and reduce reliance on string operators.
- Clarify query composition and persistence contracts through expanded Javadoc in QueryBuilder, QueryFunction, and BaseJdbcRepository.
- Simplify service implementation around BaseService.execute(...) and buildProcess(...), removing BaseServiceBuilder, PipelineServiceBuilder, FoundationBuilderService, and the ProcessBuilder hierarchy.
- Rename BaseHttpServletBuilder.setHttpServlet(...) to setHttpServletParameter(...) and require explicit exception-handling decisions in BaseAspectAround.shouldHandleException().
- Separate request validation handling into DefaultValidationExceptionHandler, controlled by CoreConfig, while retaining application and IO fault handling in DefaultAppValidationExceptionHandler.
- Standardize error responses in DefaultExceptionHandler using ServiceCodeEnum and FaultContent, including HTTP 500 handling for IllegalArgumentException.
- Add EmptyResponse and ResponseStatusOnly for operations requiring empty or status-only responses, and refine ServiceCodeEnum error definitions.
- Make ConsoleLogFilter, RollingLogFilter, and SummaryLogFilter available in the logging artifact through direct base-filter inheritance, allowing standalone Logback initialization.
- Configure foundation-starter-internal to publish the foundation-starter runtime artifact with implementation classes, auto-configuration resources, and dependency metadata.
- Organize version 1.0.0 documentation in